tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@filter_missing_required_kwarg.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/filter_missing_required_kwarg.txt
---
error: Missing keyword argument `pat`
 --> filter_missing_required_kwarg.txt:1:12
  |
1 | {{ "hey" | split }}
  |            ^^^^^
